test/conformance/chainsaw/reports/background/mutate-existing/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: staging
  labels:
    app: myapp
spec: 
  containers:
  - name: nginx
    image: nginx:latest
