test/conformance/chainsaw/reports/background/mutate-existing/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    cloud.platformzero.com/serviceClass: xl2
  labels:
    app-type: corp
  name: staging
